@@ -9,6 +9,7 @@
 * run: only a single run is allowed, throws error when you want to run multiple run in parallel
 * progress bar when performing ranking recalculation (you can turn it off via cfg)
 * rating calculation can skip errors now (configurable via cfg), useful if you want to reduce impact of random timeouts
+* [fix] pressing ctrl+c while saving db should no longer corrupt .db file (hopefully!)
 * [fix] any ranking recalculation (usually removing a bot) would reset active status of all remaining bots 
 [0.4.1]
 * [fix] info, bot remove, bot update should correctly work games with 3+ players
